# spaceball-rs

./: CLAUDE.md  Cargo.toml  README.md
docs/: orb_protocol.txt
docs/superpowers/plans/: 2026-05-26-multi-device-support.md  2026-05-27-sbprobe.md  2026-05-29-input-modes-phase1.md  2026-06-02-sbdump.md  2026-06-03-sbprobe-watch-upgrade.md
docs/superpowers/specs/: 2026-05-26-multi-device-support-design.md  2026-05-27-sbprobe-design.md  2026-06-02-sbdump-design.md  2026-06-03-sbprobe-watch-upgrade-design.md  input-modes-phase1-design.md
examples/: asteroids3d.rs  cube.rs  hexdump.rs  packetdump.rs  sbdump.rs  sbprobe.rs
src/: input_mode.rs  lib.rs  spaceball.rs  spaceorb.rs
