[package]
name = "spaceball-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# deku = "0.20.3"
pretty-hex = "0.4.2"
serialport = "4"

[dev-dependencies]
three-d = { version = "0.17", features = ["egui-gui"] }
bevy = "0.15"
bevy_rapier3d = "0.28"
rand = { version = "0.8", features = ["small_rng"] }
