[package]
name = "spaceball-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# deku = "0.20.3"
pretty-hex = "0.4.2"
serialport = "4"

[dev-dependencies]
comfy-table = "7"
three-d = { version = "0.19.0", features = ["egui-gui"] }
bevy = "0.18.1"
bevy_rapier3d = "0.34.0"
rand = { version = "0.10.1" }
